[package]
name = "rust_sushi"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cli"
path = "src/cli.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
amiquip = "0.4.2"
queues = "1.1.0"
rand = "0.8.5"
